Fixed title-box position on smaller  veiw port

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ li {
 	grid-area: title;
 	justify-self: center;
 	display: block;
-	margin: 8rem 0rem 0.9rem 0rem;
+	margin: 12rem 0rem 0.9rem 0rem;
 	font-size: 1.8rem;
 	font-weight: 600;
 	font-style: oblique;	
